--- a/todousado.html
+++ b/todousado.html
@@ -430,6 +430,12 @@
         }, {
         "desc": "Sillon Luis XV",
         "precio": "$300.000",
+        }, {
+        "desc": "Reloj de pared vintage",
+        "precio": "$15.000",
+        }, {
+        "desc": "Batidora pie planetaria Liliana ",
+        "precio": "$70.000",
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
