--- a/todousado.html
+++ b/todousado.html
@@ -489,15 +489,15 @@
     </script>
     <section>
       <h1>
-        Lista de Pau y Dani
+        Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
         Actualizada Version 7 de Febrero 2024
       </p>
+      <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
-      <p>Todos los productos son usados y se retiran por el barrio San Andres.</p>
       <p>Los pedis con el numero de item.</p>
-      <p>Se puede ver la imagen de cada item presionando el boton de Ver.</p>
+      <p>Se puede ver la imagen de cada item presionando el boton de Ver y luego se puede sacar presionando el mismo boton que dice Esc.</p>
       </section>
       <section>
         <p>Se puede filtrar por la descripción.</p>
