--- a/todousado.html
+++ b/todousado.html
@@ -153,6 +153,11 @@
       height: 30;
       font-size: 18px;
     }
+    
+    .vendido {
+      font-style: oblique;
+      text-decoration: line-through;
+    }
 
     @media only screen and (min-device-width: 568px) {
       .center {
@@ -201,241 +206,244 @@
     <script type = "text/javascript">
       const webElements = [{
         "desc": "2 ollas de montaña marca Alpine con manija en funda",
-        "precio": "$9.000",
+        "precio": "$9.000", "vendido": true,
         }, {
         "desc": "Anorak rompeviento marca REI con bolsillos en funda",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Cubremochila marca Doite en funda",
-        "precio": "$10.000",
+        "precio": "$10.000", "vendido": false,
         }, {
         "desc": "Filtro de agua marca Pur con funda",
-        "precio": "$5.000",
+        "precio": "$5.000", "vendido": false,
         }, {
         "desc": "Escalera de aluminio plegable de 4 tramos",
-        "precio": "$120.000",
+        "precio": "$120.000", "vendido": false,
         }, {
         "desc": "Monitor Samsung LED 22 pulgadas",
-        "precio": "$75.000",
+        "precio": "$75.000", "vendido": false,
         }, {
         "desc": "Teclado Genius USB ",
-        "precio": "$5.000",
+        "precio": "$5.000", "vendido": false,
         }, {
         "desc": "Casco bicicleta marca Cool para adulto",
-        "precio": "$6.000",
+        "precio": "$6.000", "vendido": false,
         }, {
         "desc": "Palo trekking regulable marca Masters",
-        "precio": "$9.000",
+        "precio": "$9.000", "vendido": false,
         }, {
         "desc": "Palo trekking regulable marca Waterdog",
-        "precio": "$7.000",
+        "precio": "$7.000", "vendido": false,
         }, {
         "desc": "Dos Palos de trekking marca The Fit Life con funda",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Zapatos de montaña impremeables marca Columbia talle 43",
-        "precio": "$35.000",
+        "precio": "$35.000", "vendido": true,
         }, {
         "desc": "Campera imperable azul Patagonia",
-        "precio": "$100.000",
+        "precio": "$100.000", "vendido": false,
         }, {
         "desc": "Pantalon impermeable de adulto Patagonia",
-        "precio": "$48.000",
+        "precio": "$48.000", "vendido": false,
         }, {
         "desc": "Carpa de montaña The North Face 3 personas Lunarfire",
-        "precio": "$125.000",
+        "precio": "$125.000", "vendido": true,
         }, {
         "desc": "Bolso de dormir The North Face adulto Bluee Kazoo",
-        "precio": "$80.000",
+        "precio": "$80.000", "vendido": false,
         }, {
         "desc": "Bolso de dormir Egge Nylsuisse naranja para adulto",
-        "precio": "$50.000",
+        "precio": "$50.000", "vendido": false,
         }, {
         "desc": "Bolso de dormir Egge Nylsuisse naranja para adulto",
-        "precio": "$50.000",
+        "precio": "$50.000", "vendido": false,
         }, {
         "desc": "Bolso de dormir Calidor niño",
-        "precio": "$20.000",
+        "precio": "$20.000", "vendido": false,
         }, {
         "desc": "Bolso de dormir Calidor niño",
-        "precio": "$20.000",
+        "precio": "$20.000", "vendido": false,
         }, {
         "desc": "Bandeja de decoración",
-        "precio": "$10.000",
+        "precio": "$10.000", "vendido": true,
         }, {
         "desc": "Secador de platos",
-        "precio": "$18.000",
+        "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Jaula decoración",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": true,
         }, {
-        "desc": "portaequipaje auto",
-        "precio": "$5.000",
+        "desc": "Portaequipaje auto",
+        "precio": "$5.000", "vendido": false,
         }, {
-        "desc": "portaequipaje auto",
-        "precio": "$5.000",
+        "desc": "Sillas de Hierro (precio cada una)",
+        "precio": "$70.000", "vendido": false,
         }, {
         "desc": "TV inteligente Noblex LED 108cm",
-        "precio": "$215.000",
+        "precio": "$215.000", "vendido": false,
         }, {
         "desc": "TV LG 42 pulgadas",
-        "precio": "$140.000",
+        "precio": "$140.000", "vendido": false,
         }, {
         "desc": "Casco bicicleta Raleigh R35 regulable",
-        "precio": "$18.000",
+        "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Heladera conservadora Coleman",
-        "precio": "$20.000",
+        "precio": "$20.000", "vendido": false,
         }, {
         "desc": "Cuadro enmarcado de El Señor de los Anillos",
-        "precio": "$14.000",
+        "precio": "$14.000", "vendido": false,
         }, {
         "desc": "Campera para niño talle 8",
-        "precio": "$7.000",
+        "precio": "$7.000", "vendido": false,
         }, {
         "desc": "Campera para niño talle 10",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Alfombra grande única hecha a mano",
-        "precio": "$200.000",
+        "precio": "$200.000", "vendido": true,
         }, {
         "desc": "Pizarra doble con rollo",
-        "precio": "$60.000",
+        "precio": "$60.000", "vendido": false,
         }, {
         "desc": "Cartera Ty",
-        "precio": "$8.000",
+        "precio": "$8.000", "vendido": false,
         }, {
         "desc": "Mesita de luz nordica",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Mesita de luz nordica",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Mueble de pinotea",
-        "precio": "$120.000",
+        "precio": "$120.000", "vendido": false,
         }, {
         "desc": "Portavela o florero de decoración (2)",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Balanza de pie",
-        "precio": "$18.000",
+        "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Banquito",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Sillon matero",
-        "precio": "$25.000",
+        "precio": "$25.000", "vendido": false,
         }, {
         "desc": "Sillon Pie de Cama",
-        "precio": "$35.000",
+        "precio": "$35.000", "vendido": false,
         }, {
         "desc": "Espejo antiguo 160 cm x 60 cm",
-        "precio": "$150.000",
+        "precio": "$150.000", "vendido": false,
         }, {
         "desc": "Espejo antiguo 85 cm X 60 cm",
-        "precio": "$120.000",
+        "precio": "$120.000", "vendido": false,
         }, {
         "desc": "Espejo antiguo 70 cm",
-        "precio": "$80.000",
+        "precio": "$80.000", "vendido": false,
         }, {
         "desc": "Auriculares Hyperx",
-        "precio": "$40.000",
+        "precio": "$40.000", "vendido": false,
         }, {
         "desc": "Pistola juguete Silenciadora Elite NERF FORTNITE con 10 balas cerradas",
-        "precio": "$45.000",
+        "precio": "$45.000", "vendido": false,
         }, {
         "desc": "Arco Prana Junior para adolescentes y 2 flechas",
-        "precio": "$60.000",
+        "precio": "$60.000", "vendido": false,
         }, {
         "desc": "Coleccion de 54 autitos de juguete y rueda Hot Wheels para guardar",
-        "precio": "$100.000",
+        "precio": "$100.000", "vendido": false,
         }, {
         "desc": "Silla de auto para niño de hasta 12 años",
-        "precio": "$30.000",
+        "precio": "$30.000", "vendido": false,
         }, {
         "desc": "Silla de auto para niño de hasta 12 años",
-        "precio": "$30.000",
+        "precio": "$30.000", "vendido": false,
         }, {
         "desc": "Juego de 6 sillas estilo Windsore",
-        "precio": "$150.000",
+        "precio": "$150.000", "vendido": true,
         }, {
         "desc": "Picadora Moulinex",
-        "precio": "$30.000",
+        "precio": "$30.000", "vendido": false,
         }, {
         "desc": "Licuadora Phillips",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Pava electrica Phillips",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Olla extra grande 28cm Tramontina",
-        "precio": "$40.000",
+        "precio": "$40.000", "vendido": false,
         }, {
         "desc": "Olla a presión Marmicoc",
-        "precio": "$30.000",
+        "precio": "$30.000", "vendido": true,
         }, {
         "desc": "Ensaladera de losa blanca",
-        "precio": "$10.000",
+        "precio": "$10.000", "vendido": false,
         }, {
         "desc": "Ensaladera de madera",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Medidor de vidrio grande",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Mueble de madera maciza",
-        "precio": "$90.000",
+        "precio": "$90.000", "vendido": false,
         }, {
         "desc": "Termnos importados marca Maxso (precio cada uno)",
-        "precio": "$20.000",
+        "precio": "$20.000", "vendido": false,
         }, {
         "desc": "Tupper Maped Picnic (precio cada uno)",
-        "precio": "$8.000",
+        "precio": "$8.000", "vendido": false,
         }, {
         "desc": "Juego de comoda con 2 mesitas de luz (no salen en la foto)",
-        "precio": "$100.000",
+        "precio": "$100.000", "vendido": false,
         }, {
         "desc": "Juguetes muñeqas Barbie original (precio por cada muñequa)",
-        "precio": "$8.000",
+        "precio": "$8.000", "vendido": false,
         }, {
         "desc": "Juguetes muñeqas LOL original (precio por cada muñequa)",
-        "precio": "$5.000",
+        "precio": "$5.000", "vendido": false,
         }, {
         "desc": "Juguete Fischer-Price original Dinosaurio grande",
-        "precio": "$25.000",
+        "precio": "$25.000", "vendido": false,
         }, {
         "desc": "Sillas de jardin, juego completo",
-        "precio": "$20.000",
+        "precio": "$20.000", "vendido": true,
         }, {
         "desc": "Muñequas Lallaloopsy originales (precio por cada muñequa)",
-        "precio": "$12.000",
+        "precio": "$12.000", "vendido": false,
         }, {
         "desc": "Bicicleta Mussetta Rodado 24 Vintage",
-        "precio": "$125.000",
+        "precio": "$125.000", "vendido": true,
         }, {
         "desc": "Bicicleta Blueray Rodado 24 ",
-        "precio": "$80.000",
+        "precio": "$80.000", "vendido": false,
         }, {
         "desc": "Bicicleta Zenith Rodado 26",
-        "precio": "$60.000",
+        "precio": "$60.000", "vendido": true,
         }, {
         "desc": "Bicicleta Vairo Rodado 26",
-        "precio": "$60.000",
+        "precio": "$60.000", "vendido": true,
         }, {
         "desc": "Bicicleta GT Bikes Rodado 20 para prueba",
-        "precio": "$80.000",
+        "precio": "$80.000", "vendido": true,
         }, {
         "desc": "Bicicleta Raleigh Rodado 26",
-        "precio": "$200.000",
+        "precio": "$200.000", "vendido": true,
         }, {
         "desc": "Sillon Luis XV",
-        "precio": "$300.000",
+        "precio": "$300.000", "vendido": false,
         }, {
         "desc": "Reloj de pared vintage",
-        "precio": "$15.000",
+        "precio": "$15.000", "vendido": false,
         }, {
-        "desc": "Batidora pie planetaria Liliana ",
-        "precio": "$70.000",
+        "desc": "Batidora de pie planetaria Liliana",
+        "precio": "$70.000", "vendido": false,
+        }, {
+        "desc": "Juego de sillones exterior para galeria",
+        "precio": "$120.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -472,7 +480,17 @@
         for(let i = 0;i < webElements.length;i++)
         {
           item = String(i+1).padStart(5, '0');
-          row = row 
+          if (webElements[i].vendido) {
+            row = row
+            + "<li id='row" + item + "' class='vendido'>"
+            + "<div class='numero'>" + (i+1) + ".</div>"
+            + "<div class='desc item'>"+webElements[i].desc+"</div>"
+            + "<div class='money item'>"+webElements[i].precio+"</div>"
+            + "<div>VENDIDO</div>"
+            + "</li>"; 
+          }
+          else {
+            row = row
             + "<li id='row" + item + "'>"
             + "<div class='numero'>" + (i+1) + ".</div>"
             + "<div class='desc item'>"+webElements[i].desc+"</div>"
@@ -483,6 +501,7 @@
             + "<div class='center'>"
             + "<img id='image" + item + "' src='https://media.publit.io/file/USADOS" + item + ".jpg' class='image'>"
             + "</div>"; 
+          }
         };
         document.getElementById('mylist').innerHTML += row;
       }
@@ -492,7 +511,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 7 de Febrero 2024
+        Actualizada Version 8 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
