--- a/todousado.html
+++ b/todousado.html
@@ -444,6 +444,9 @@
         }, {
         "desc": "Juego de sillones exterior para galeria",
         "precio": "$120.000", "vendido": false,
+        }, {
+        "desc": "Arbolito de Navidad completo altura total 1,70 mts",
+        "precio": "$50.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
