--- a/todousado.html
+++ b/todousado.html
@@ -311,7 +311,7 @@
         "precio": "$8.000", "vendido": false,
         }, {
         "desc": "Mesita de luz nordica",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Mesita de luz nordica",
         "precio": "$15.000", "vendido": false,
@@ -326,7 +326,7 @@
         "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Banquito",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Sillon matero",
         "precio": "$25.000", "vendido": false,
@@ -447,6 +447,129 @@
         }, {
         "desc": "Arbolito de Navidad completo altura total 1,70 mts",
         "precio": "$50.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Dominion Big Box (en ingles), con Alchemy y Prosperity ",
+        "precio": "$60.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Diplomacy (version original en ingles)",
+        "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Clue",
+        "precio": "$11.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Crucigrama, version local del Scrabble ",
+        "precio": "$6.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Risk (en ingles), version de EEUU del TEG ",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa La Clave del Escorpion",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Jumanji",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Pit (original en ingles)",
+        "precio": "$21.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Rack-O (original en ingles)",
+        "precio": "$22.000", "vendido": false,
+        }, {
+        "desc": "Juego de cartas Set (original en ingles)",
+        "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Codigo Secreto",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Tuf.Abet (original en ingles)",
+        "precio": "$14.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Qwirkle (en ingles) ",
+        "precio": "$20.000", "vendido": false,
+        },{
+        "desc": "Juego de mesa Carcassone (original en ingles) con dos cajas de expansiones",
+        "precio": "$50.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa 7wonders Duel (original en ingles) con expansion Pantheon",
+        "precio": "$38.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Carcassone Junior (original en ingles)",
+        "precio": "$28.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Forbidden Island (en ingles)",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Juego de cartas 1000 millas",
+        "precio": "11.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Lost Cities 2 player (en ingles)",
+        "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Clue Jr (en ingles)",
+        "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa TransEuropa (en ingles)",
+        "precio": "$48.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Power Grid (en ingles) con expansion Russia/Japon",
+        "precio": "$48.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Ticket to Ride Rails & Sails (en ingles)",
+        "precio": "$68.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Ticket To Ride Europa (en ingles)",
+        "precio": "$48.000", "vendido": false,
+        }, {
+        "desc": "Expansion Juego de mesa Ticket to Ride Europa 1912 (en ingles)",
+        "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Ticket to Ride (en ingles) Mapa EEUU",
+        "precio": "$48.000", "vendido": false,
+        }, {
+        "desc": "Expansion Juego de mesa Ticket to Ride EEUU 1910 (en ingles)",
+        "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Ticket to Ride New York (en ingles)",
+        "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Ticket to Ride Nordic Countries (en ingles)",
+        "precio": "$46.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Ticket to India/Switzrland Countries (en ingles)",
+        "precio": "$38.000", "vendido": false,
+        }, {
+        "desc": "Ticket to Ride United Kingdom / Pennsylvania (en ingles)",
+        "precio": "$38.000", "vendido": false,
+        }, {
+        "desc": "Ticket to Ride Poland (en ingles)",
+        "precio": "$28.000", "vendido": false,
+        }, {
+        "desc": "Ticket to Ride Märklin Alemania (en ingles)",
+        "precio": "$28.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa 7 Wonders",
+        "precio": "$65.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Jumanji ",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Jumanji ",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juguetes - Set de cubos Rubix ",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Jumanji ",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Jumanji ",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Jumanji ",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa Jumanji ",
+        "precio": "$8.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
