--- a/todousado.html
+++ b/todousado.html
@@ -479,10 +479,10 @@
         "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Codigo Secreto",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$19.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Tuf.Abet (original en ingles)",
-        "precio": "$14.000", "vendido": false,
+        "precio": "$12.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Qwirkle (en ingles) ",
         "precio": "$20.000", "vendido": false,
@@ -538,19 +538,19 @@
         "desc": "Juego de mesa Ticket to India/Switzrland Countries (en ingles)",
         "precio": "$38.000", "vendido": false,
         }, {
-        "desc": "Ticket to Ride United Kingdom / Pennsylvania (en ingles)",
+        "desc": "Juego de mesa Ticket to Ride United Kingdom / Pennsylvania (en ingles)",
         "precio": "$38.000", "vendido": false,
         }, {
-        "desc": "Ticket to Ride Poland (en ingles)",
+        "desc": "Juego de mesa Ticket to Ride Poland (en ingles)",
         "precio": "$28.000", "vendido": false,
         }, {
-        "desc": "Ticket to Ride Märklin Alemania (en ingles)",
+        "desc": "Juego de mesa Ticket to Ride Märklin Alemania (en ingles)",
         "precio": "$28.000", "vendido": false,
         }, {
-        "desc": "Juego de mesa 7 Wonders",
+        "desc": "Juego de mesa 7 Wonders (en ingles)",
         "precio": "$65.000", "vendido": false,
         }, {
-        "desc": "Juguetes - Set de cubos Rubix ",
+        "desc": "Juguetes - Set de cubos Rubix",
         "precio": "$25.000", "vendido": false,
         }];
       function show(num) {
