--- a/todousado.html
+++ b/todousado.html
@@ -550,7 +550,7 @@
         "desc": "Juego de mesa 7 Wonders (en ingles)",
         "precio": "$65.000", "vendido": false,
         }, {
-        "desc": "Juguetes - Set de cubos Rubix",
+        "desc": "Juguetes - Set de cubos Rubik",
         "precio": "$25.000", "vendido": false,
         }];
       function show(num) {
