--- a/todousado.html
+++ b/todousado.html
@@ -215,7 +215,7 @@
         "precio": "$10.000", "vendido": false,
         }, {
         "desc": "Filtro de agua marca Pur con funda",
-        "precio": "$5.000", "vendido": false,
+        "precio": "$5.000", "vendido": true,
         }, {
         "desc": "Escalera de aluminio plegable de 4 tramos",
         "precio": "$120.000", "vendido": false,
@@ -552,6 +552,42 @@
         }, {
         "desc": "Juguetes - Set de cubos Rubik",
         "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Freezer Peabody Vertical Pe-fv80 90 Litros",
+        "precio": "$295.000", "vendido": false,
+        }, {
+        "desc": "Bandejas de acero inoxidable (precio por cada una)",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Bandeja de decoración plástico duro",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Bandeja chica",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Juguetes - Set de cubos Rubik",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Conejo decoración 23cm",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Lechuza decoración 13cm",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Lechuza decoración 10cm cerámica",
+        "precio": "$6.000", "vendido": false,
+        }, {
+        "desc": "Lechuza decoración 13cm",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Bandeja antigua de acero y hierro grande ",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Lechuza decoración 13cm",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Libro Todo Mafalda - Colección completa",
+        "precio": "$30.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
