--- a/todousado.html
+++ b/todousado.html
@@ -588,6 +588,27 @@
         }, {
         "desc": "Libro Todo Mafalda - Colección completa",
         "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Libo Van Gogh La Obra Completa: pintura",
+        "precio": "$35.000", "vendido": false,
+        }, {
+        "desc": "Decoración moderna acero",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Mesita redonda estilo francés Luis VX",
+        "precio": "$75.000", "vendido": false,
+        }, {
+        "desc": "Aspirador Robot Ecovacs Deebot 661 wifi mopa",
+        "precio": "240.000", "vendido": false,
+        }, {
+        "desc": "Celador Acero Inoxidable",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Celador Acero Inoxidable",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Cuadros de Mar (2 se venden juntos)",
+        "precio": "$20.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
