--- a/todousado.html
+++ b/todousado.html
@@ -254,10 +254,10 @@
         "precio": "$80.000", "vendido": false,
         }, {
         "desc": "Bolso de dormir Egge Nylsuisse naranja para adulto",
-        "precio": "$50.000", "vendido": false,
+        "precio": "$50.000", "vendido": true,
         }, {
         "desc": "Bolso de dormir Egge Nylsuisse naranja para adulto",
-        "precio": "$50.000", "vendido": false,
+        "precio": "$50.000", "vendido": true,
         }, {
         "desc": "Bolso de dormir Calidor niño",
         "precio": "$20.000", "vendido": false,
