--- a/todousado.html
+++ b/todousado.html
@@ -600,6 +600,15 @@
         }, {
         "desc": "Cuadros de Mar (2 se venden juntos)",
         "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Reposera blanca rigida",
+        "precio": "$45.000", "vendido": false,
+        }, {
+        "desc": "Reposera blanca rigida",
+        "precio": "$45.000", "vendido": false,
+        }, {
+        "desc": "Cama Saltarina Grande (4 metros)",
+        "precio": "$250.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
