--- a/todousado.html
+++ b/todousado.html
@@ -392,7 +392,7 @@
         "precio": "$90.000", "vendido": false,
         }, {
         "desc": "Termnos importados marca Maxso (precio cada uno)",
-        "precio": "$20.000", "vendido": false,
+        "precio": "$20.000", "vendido": true,
         }, {
         "desc": "Tupper Maped Picnic (precio cada uno)",
         "precio": "$8.000", "vendido": false,
