--- a/todousado.html
+++ b/todousado.html
@@ -400,10 +400,10 @@
         "desc": "Juego de comoda con 2 mesitas de luz (no salen en la foto)",
         "precio": "$100.000", "vendido": false,
         }, {
-        "desc": "Juguetes muñeqas Barbie original (precio por cada muñequa)",
-        "precio": "$8.000", "vendido": false,
+        "desc": "Juguetes muñecas Barbie original (precio por cada muñecua)",
+        "precio": "$10.000", "vendido": false,
         }, {
-        "desc": "Juguetes muñeqas LOL original (precio por cada muñequa)",
+        "desc": "Juguetes muñecas LOL original (precio por cada muñecua)",
         "precio": "$5.000", "vendido": false,
         }, {
         "desc": "Juguete Fischer-Price original Dinosaurio grande",
@@ -412,7 +412,7 @@
         "desc": "Sillas de jardin, juego completo",
         "precio": "$20.000", "vendido": true,
         }, {
-        "desc": "Muñequas Lallaloopsy originales (precio por cada muñequa)",
+        "desc": "muñecuas Lallaloopsy originales (precio por cada muñecua)",
         "precio": "$12.000", "vendido": false,
         }, {
         "desc": "Bicicleta Mussetta Rodado 24 Vintage",
@@ -609,6 +609,78 @@
         }, {
         "desc": "Cama Saltarina Grande (4 metros)",
         "precio": "$250.000", "vendido": false,
+        }, {
+        "desc": "Juguetes muñecas Barbies original (precio por muñeca)",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Juguete Gatito Disney",
+        "precio": "$6.000", "vendido": false,
+        }, {
+        "desc": "Jueguete Caballo Spirit",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Cartuchera Poput",
+        "precio": "$3.000", "vendido": false,
+        }, {
+        "desc": "Set de Revistas de figuritas de los Mundiales",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Juguetes Bebotes importados (precio por muñeco)",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca de trapo chica",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca de trapo larga",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca Pepa Pig única",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca Moana original",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeco Shimmeez",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca de trapo",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca American Girl original",
+        "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca Oveja de Trapo",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca de trapo",
+        "precio": "$12.000", "vendido": false,
+        }, {
+        "desc": "Juguete Ositos importados (precio cada uno)",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Juguo de Crochet",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Set Diarios Secretos Gravity Falls",
+        "precio": "$12.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeco Caballito con ruedas",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Mochila",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Juguete Leon de peluche",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juego de mesa 4 en linea",
+        "precio": "$12.000", "vendido": false,
+        }, {
+        "desc": "Juguete Carterita Popit",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Juguete Carterita Popit",
+        "precio": "$10.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
