--- a/todousado.html
+++ b/todousado.html
@@ -619,7 +619,10 @@
         "desc": "Jueguete Caballo Spirit",
         "precio": "$15.000", "vendido": false,
         }, {
-        "desc": "Cartuchera Poput",
+        "desc": "Juguete Muñeco Osito",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Cartuchera Popit",
         "precio": "$3.000", "vendido": false,
         }, {
         "desc": "Set de Revistas de figuritas de los Mundiales",
