--- a/todousado.html
+++ b/todousado.html
@@ -661,7 +661,7 @@
         "desc": "Juguete Ositos importados (precio cada uno)",
         "precio": "$5.000", "vendido": false,
         }, {
-        "desc": "Juguo de Crochet",
+        "desc": "Juego de Crochet",
         "precio": "$10.000", "vendido": false,
         }, {
         "desc": "Set Diarios Secretos Gravity Falls",
@@ -683,6 +683,27 @@
         "precio": "$5.000", "vendido": false,
         }, {
         "desc": "Juguete Carterita Popit",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Juguete Pistola Mini NERF Fortnite Scar",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juguete Pistola NERF Double Dealer + doce balas - funciona bien pero se puede trabar",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Juguete Espada Star Wars Dinsey original con ruido y luz",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca Masha y el Oso, canta",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca Tys originales (precio por muñeca)",
+        "precio": "$7.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeca Baby Cry mini",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juguete Set Muñecos Crochet",
         "precio": "$10.000", "vendido": false,
         }];
       function show(num) {
