--- a/todousado.html
+++ b/todousado.html
@@ -705,6 +705,33 @@
         }, {
         "desc": "Juguete Set Muñecos Crochet",
         "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Juguete Pistola Bajo Terra importada mas 6 balas",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Libo para hacer aviones de papel",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Juguete Canasta mimbre",
+        "precio": "$6.000", "vendido": false,
+        }, {
+        "desc": "Libro Harry Potter Nuevo",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Juguete Muñeco Storm Troopers Star Wars original hace ruido",
+        "precio": "$12.000", "vendido": false,
+        }, {
+        "desc": "Comic Gravity Falls",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Rollers regulables talle Small marca Lamborghini",
+        "precio": "$35.000", "vendido": false,
+        }, {
+        "desc": "Juguete Pistola Nerf Mini con 3 balas",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Juguete Pistola Nerf Stampede, requiere pilas con 6 balas",
+        "precio": "$80.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
