--- a/todousado.html
+++ b/todousado.html
@@ -233,7 +233,7 @@
         "precio": "$9.000", "vendido": false,
         }, {
         "desc": "Palo trekking regulable marca Waterdog",
-        "precio": "$7.000", "vendido": false,
+        "precio": "$7.000", "vendido": true,
         }, {
         "desc": "Dos Palos de trekking marca The Fit Life con funda",
         "precio": "$15.000", "vendido": true,
@@ -269,7 +269,7 @@
         "precio": "$10.000", "vendido": true,
         }, {
         "desc": "Secador de platos",
-        "precio": "$18.000", "vendido": false,
+        "precio": "$18.000", "vendido": true,
         }, {
         "desc": "Jaula decoración",
         "precio": "$15.000", "vendido": true,
@@ -290,7 +290,7 @@
         "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Heladera conservadora Coleman",
-        "precio": "$20.000", "vendido": false,
+        "precio": "$20.000", "vendido": true,
         }, {
         "desc": "Cuadro enmarcado de El Señor de los Anillos",
         "precio": "$14.000", "vendido": false,
@@ -314,10 +314,10 @@
         "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Mesita de luz nordica",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Mueble de pinotea",
-        "precio": "$120.000", "vendido": false,
+        "precio": "$120.000", "vendido": true,
         }, {
         "desc": "Portavela o florero de decoración (2)",
         "precio": "$15.000", "vendido": true,
@@ -389,7 +389,7 @@
         "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Mueble de madera maciza",
-        "precio": "$90.000", "vendido": false,
+        "precio": "$90.000", "vendido": true,
         }, {
         "desc": "Termnos importados marca Maxso (precio cada uno)",
         "precio": "$20.000", "vendido": true,
