--- a/todousado.html
+++ b/todousado.html
@@ -732,6 +732,63 @@
         }, {
         "desc": "Juguete Pistola Nerf Stampede, requiere pilas con 6 balas",
         "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "Set 4 Almohadones nórdicos peludos",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Set 8 almohadones",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Diccionario Ingles Oxford",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Decoración Mapamundi Globo Terraqueo",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Órgano Baldwin para arreglar",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Armario para copas con 2 cajones madera guatambu",
+        "precio": "$60.000", "vendido": false,
+        }, {
+        "desc": "Fondue",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Microondas LG (funciona OK)",
+        "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Hornito Yelmo (funciona OK)",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "2 acolchados iguales 1 plaza (precio por cada uno)",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "2 acolchados refversibles importados(precio por cada uno)",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "2 acolchados iguales (precio por cada uno)",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Frazadas importadas con corderito (precio por cada uno)",
+        "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza",
+        "precio": "$40.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza",
+        "precio": "$40.000", "vendido": false,
+        }, {
+        "desc": "Frazadas ultra calentitas importadas",
+        "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Catre Blanco de 1 plaza con colchon",
+        "precio": "$60.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza laqueadas masizas",
+        "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza laqueadas masizas",
+        "precio": "$80.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -799,7 +856,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 9 de Febrero 2024
+        Actualizada Version 10 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
