--- a/todousado.html
+++ b/todousado.html
@@ -365,7 +365,7 @@
         "precio": "$150.000", "vendido": true,
         }, {
         "desc": "Picadora Moulinex",
-        "precio": "$30.000", "vendido": false,
+        "precio": "$30.000", "vendido": true,
         }, {
         "desc": "Licuadora Phillips",
         "precio": "$15.000", "vendido": false,
@@ -443,7 +443,7 @@
         "precio": "$70.000", "vendido": false,
         }, {
         "desc": "Juego de sillones exterior para galeria",
-        "precio": "$120.000", "vendido": false,
+        "precio": "$120.000", "vendido": true,
         }, {
         "desc": "Arbolito de Navidad completo altura total 1,70 mts",
         "precio": "$50.000", "vendido": false,
