--- a/todousado.html
+++ b/todousado.html
@@ -251,7 +251,7 @@
         "precio": "$125.000", "vendido": true,
         }, {
         "desc": "Bolso de dormir The North Face adulto Bluee Kazoo",
-        "precio": "$80.000", "vendido": false,
+        "precio": "$80.000", "vendido": true,
         }, {
         "desc": "Bolso de dormir Egge Nylsuisse naranja para adulto",
         "precio": "$50.000", "vendido": true,
@@ -737,7 +737,7 @@
         "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Set 8 almohadones",
-        "precio": "$20.000", "vendido": false,
+        "precio": "$20.000", "vendido": true,
         }, {
         "desc": "Diccionario Ingles Oxford",
         "precio": "$15.000", "vendido": false,
@@ -789,6 +789,12 @@
         }, {
         "desc": "Cama de 1 plaza laqueadas masizas",
         "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "TV Noblex LED 32\" (80 cms de vision)",
+        "precio": "$75.000", "vendido": false,
+        }, {
+        "desc": "Auriculares alta gama Mpow con reduccion de ruido",
+        "precio": "$18.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
