--- a/todousado.html
+++ b/todousado.html
@@ -795,6 +795,9 @@
         }, {
         "desc": "Auriculares alta gama Mpow con reduccion de ruido",
         "precio": "$18.000", "vendido": false,
+        }, {
+        "desc": "Mochila termica importada marca Ozark Trails, excelente para llevar cervezas en caminata",
+        "precio": "$40.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -862,7 +865,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 10 de Febrero 2024
+        Actualizada Version 11 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
