--- a/todousado.html
+++ b/todousado.html
@@ -734,7 +734,7 @@
         "precio": "$80.000", "vendido": false,
         }, {
         "desc": "Set 4 Almohadones nórdicos peludos",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Set 8 almohadones",
         "precio": "$20.000", "vendido": true,
@@ -778,7 +778,7 @@
         "desc": "Cama de 1 plaza",
         "precio": "$40.000", "vendido": false,
         }, {
-        "desc": "Frazadas ultra calentitas importadas",
+        "desc": "Frazada ultra calentita importada (solo queda la marron)",
         "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Catre Blanco de 1 plaza con colchon",
@@ -798,6 +798,36 @@
         }, {
         "desc": "Mochila termica importada marca Ozark Trails, excelente para llevar cervezas en caminata",
         "precio": "$40.000", "vendido": false,
+        }, {
+        "desc": "Chevrolet Spin 7 Asientos Diesel 1.3 (se entrega despues de chapa y pintura de detalles) 189.000 km reales",
+        "precio": "USD8.000", "vendido": false,
+        }, {
+        "desc": "Adorno para poner collares",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Alcochado para cama queen",
+        "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Poncho de lana de oveja mujer como nuevo",
+        "precio": "$55.000", "vendido": false,
+        }, {
+        "desc": "Campera M Uniclo",
+        "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza laqueadas masizas",
+        "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza laqueadas masizas",
+        "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza laqueadas masizas",
+        "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza laqueadas masizas",
+        "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "Cama de 1 plaza laqueadas masizas",
+        "precio": "$80.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
