--- a/todousado.html
+++ b/todousado.html
@@ -811,23 +811,23 @@
         "desc": "Poncho de lana de oveja mujer como nuevo",
         "precio": "$55.000", "vendido": false,
         }, {
-        "desc": "Campera M Uniclo",
-        "precio": "$80.000", "vendido": false,
+        "desc": "Campera M Uniclo (arreglar cierre)",
+        "precio": "$20.000", "vendido": false,
         }, {
-        "desc": "Cama de 1 plaza laqueadas masizas",
-        "precio": "$80.000", "vendido": false,
+        "desc": "Campera Jean Corderito",
+        "precio": "$25.000", "vendido": false,
         }, {
-        "desc": "Cama de 1 plaza laqueadas masizas",
-        "precio": "$80.000", "vendido": false,
+        "desc": "Campera S de Duvet como nueva importada",
+        "precio": "$55.000", "vendido": false,
         }, {
-        "desc": "Cama de 1 plaza laqueadas masizas",
-        "precio": "$80.000", "vendido": false,
+        "desc": "Campera sin uso S/M importada super calentita",
+        "precio": "$50.000", "vendido": false,
         }, {
-        "desc": "Cama de 1 plaza laqueadas masizas",
-        "precio": "$80.000", "vendido": false,
+        "desc": "Campera militar cancherisima Miss Sixty S",
+        "precio": "$30.000", "vendido": false,
         }, {
-        "desc": "Cama de 1 plaza laqueadas masizas",
-        "precio": "$80.000", "vendido": false,
+        "desc": "Campera azul para Varon/Mujer entre 14/16 años nueva",
+        "precio": "$45.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
