--- a/todousado.html
+++ b/todousado.html
@@ -828,6 +828,9 @@
         }, {
         "desc": "Campera azul para Varon/Mujer entre 14/16 años nueva",
         "precio": "$45.000", "vendido": false,
+        }, {
+        "desc": "Juego Ajedrez 37cm x 19cm",
+        "precio": "$6.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
