--- a/todousado.html
+++ b/todousado.html
@@ -831,6 +831,12 @@
         }, {
         "desc": "Juego Ajedrez 37cm x 19cm",
         "precio": "$6.000", "vendido": false,
+        }, {
+        "desc": "Mochila con bolsillo interno para notebook",
+        "precio": "$17.000", "vendido": false,
+        }, {
+        "desc": "Binoculares Konus 8x21 con funda",
+        "precio": "$20.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
