--- a/todousado.html
+++ b/todousado.html
@@ -837,6 +837,18 @@
         }, {
         "desc": "Binoculares Konus 8x21 con funda",
         "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Portaretrato de 4 fotos 15\"x21\"",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Portaretrato de 4 fotos 15\"x21\"",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Colchoneta inflabe para camping ThermaRest importada 120x54",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Colchoneta inflabe para camping ThermaRest importada 120x54",
+        "precio": "$15.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
