--- a/todousado.html
+++ b/todousado.html
@@ -144,8 +144,12 @@
       padding: 12px;
       background: #f2f2f2;
       border-radius: 8px;
-      width: 200 px;
+      width: 300 px;
       border: none;
+    }
+
+    .filtro {
+      width: 50px;
     }
 
     .filtrar {
@@ -849,6 +853,21 @@
         }, {
         "desc": "Colchoneta inflabe para camping ThermaRest importada 120x54",
         "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Raqueta Tenis Wilson Blade casi nueva",
+        "precio": "$180.000", "vendido": false,
+        }, {
+        "desc": "Raqueta Tenis Wilson",
+        "precio": "$85.000", "vendido": false,
+        }, {
+        "desc": "Set 6 Sillas Windsor madera originales antiguas",
+        "precio": "$225.000", "vendido": false,
+        }, {
+        "desc": "Mesa maciza algarrobo lijada 240x110x75",
+        "precio": "$480.000", "vendido": false,
+        }, {
+        "desc": "Espejo con marco de madera laqueada 104x74",
+        "precio": "$90.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -916,7 +935,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 11 de Febrero 2024
+        Actualizada Version 12 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
@@ -927,7 +946,7 @@
         <p>Se puede filtrar por la descripción.</p>
       <input type="text" name="enter" class="enter" value="" id="filtro"/>
       <button class='filtrar' type='button' onclick="filtrar(document.getElementById('filtro').value,webElements)">Filtrar</button>
-      <button class='filtrar' type='button' onclick="filtrar('',webElements)">Sacar Filtro</button>
+      <button class='filtrar' type='button' onclick="filtrar('',webElements)">Volver</button>
     </section>
     <section>
       <ul class="space_list" id="mylist"></ul>
