--- a/todousado.html
+++ b/todousado.html
@@ -868,6 +868,18 @@
         }, {
         "desc": "Espejo con marco de madera laqueada 104x74",
         "precio": "$90.000", "vendido": false,
+        }, {
+        "desc": "Sillones antiguos de hierro (precio por cada uno)",
+        "precio": "$65.000", "vendido": false,
+        }, {
+        "desc": "Balanza Electronica Digital Cocina 1gr A 5kg Tara Precision Capacidad Máxima 5 Kg Color Blanco",
+        "precio": "$9.000", "vendido": false,
+        }, {
+        "desc": "Selladora de bolsa 20cm",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Lampara de escritorio Daewoo Pantalla Metal",
+        "precio": "$30.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
