--- a/todousado.html
+++ b/todousado.html
@@ -883,6 +883,36 @@
         }, {
         "desc": "Lampara de escritorio Daewoo Pantalla Metal",
         "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Planta con maceta grande Montesquera oblicua",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Plata grande interior Filodendro con maceta",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Planta interior grande con maceta Dieffenbachia",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Planta palo de agua con maceta",
+        "precio": "$12.000", "vendido": false,
+        }, {
+        "desc": "Aspiradora robot Deebot 661 con mopa",
+        "precio": "$250.000", "vendido": false,
+        }, {
+        "desc": "Biblioteca madera maciza 1,75x1,00",
+        "precio": "$60.000", "vendido": false,
+        }, {
+        "desc": "Mueble con cuatro canastos",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Guardador de jueguetes/etcde madera laqueado",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Estanteria de madera guatambu 1,81x0,68",
+        "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "2 banquitos altos para desayunador",
+        "precio": "$30.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
