--- a/todousado.html
+++ b/todousado.html
@@ -755,7 +755,7 @@
         "desc": "Órgano Baldwin para arreglar",
         "precio": "$25.000", "vendido": false,
         }, {
-        "desc": "Armario para copas con 2 cajones madera guatambu",
+        "desc": "Armario para copas con 2 cajones madera guatambu 0,54x1,94",
         "precio": "$60.000", "vendido": false,
         }, {
         "desc": "Fondue",
@@ -913,6 +913,9 @@
         }, {
         "desc": "2 banquitos altos para desayunador",
         "precio": "$30.000", "vendido": false,
+        }, {
+        "desc": "Mesa maciza ratona pinotea 88x150x44",
+        "precio": "$250.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
