--- a/todousado.html
+++ b/todousado.html
@@ -375,7 +375,7 @@
         "precio": "$30.000", "vendido": true,
         }, {
         "desc": "Licuadora Phillips",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Pava electrica Phillips",
         "precio": "$15.000", "vendido": true,
@@ -486,16 +486,16 @@
         "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Codigo Secreto",
-        "precio": "$19.000", "vendido": false,
+        "precio": "$19.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Tuf.Abet (original en ingles)",
-        "precio": "$12.000", "vendido": false,
+        "precio": "$12.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Qwirkle (en ingles) ",
         "precio": "$20.000", "vendido": false,
         },{
         "desc": "Juego de mesa Carcassone (original en ingles) con dos cajas de expansiones",
-        "precio": "$50.000", "vendido": false,
+        "precio": "$50.000", "vendido": true,
         }, {
         "desc": "Juego de mesa 7wonders Duel (original en ingles) con expansion Pantheon",
         "precio": "$38.000", "vendido": false,
@@ -525,7 +525,7 @@
         "precio": "$68.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Ticket To Ride Europa (en ingles)",
-        "precio": "$48.000", "vendido": false,
+        "precio": "$48.000", "vendido": true
         }, {
         "desc": "Expansion Juego de mesa Ticket to Ride Europa 1912 (en ingles)",
         "precio": "$30.000", "vendido": false,
