--- a/todousado.html
+++ b/todousado.html
@@ -237,7 +237,7 @@
         "precio": "$6.000", "vendido": false,
         }, {
         "desc": "Palo trekking regulable marca Masters",
-        "precio": "$9.000", "vendido": false,
+        "precio": "$9.000", "vendido": true,
         }, {
         "desc": "Palo trekking regulable marca Waterdog",
         "precio": "$7.000", "vendido": true,
