--- a/todousado.html
+++ b/todousado.html
@@ -419,7 +419,7 @@
         "desc": "Sillas de jardin, juego completo",
         "precio": "$20.000", "vendido": true,
         }, {
-        "desc": "muñecuas Lallaloopsy originales (precio por cada muñecua)",
+        "desc": "Muñecuas Lallaloopsy originales (precio por cada muñecua)",
         "precio": "$12.000", "vendido": false,
         }, {
         "desc": "Bicicleta Mussetta Rodado 24 Vintage",
@@ -594,7 +594,7 @@
         "precio": "$20.000", "vendido": false,
         }, {
         "desc": "Mesita redonda estilo francés Luis VX",
-        "precio": "$75.000", "vendido": false,
+        "precio": "$75.000", "vendido": true,
         }, {
         "desc": "Aspirador Robot Ecovacs Deebot 661 wifi mopa",
         "precio": "240.000", "vendido": false,
