--- a/todousado.html
+++ b/todousado.html
@@ -225,7 +225,7 @@
         "precio": "$5.000", "vendido": true,
         }, {
         "desc": "Escalera de aluminio plegable de 4 tramos",
-        "precio": "$120.000", "vendido": false,
+        "precio": "$120.000", "vendido": true,
         }, {
         "desc": "Monitor Samsung LED 22 pulgadas",
         "precio": "$75.000", "vendido": false,
@@ -567,7 +567,7 @@
         "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Bandeja de decoración plástico duro",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Bandeja chica",
         "precio": "$5.000", "vendido": false,
@@ -750,7 +750,7 @@
         "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Decoración Mapamundi Globo Terraqueo",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Órgano Baldwin para arreglar",
         "precio": "$25.000", "vendido": false,
@@ -876,13 +876,13 @@
         "precio": "$65.000", "vendido": false,
         }, {
         "desc": "Balanza Electronica Digital Cocina 1gr A 5kg Tara Precision Capacidad Máxima 5 Kg Color Blanco",
-        "precio": "$9.000", "vendido": false,
+        "precio": "$9.000", "vendido": true,
         }, {
         "desc": "Selladora de bolsa 20cm",
         "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Lampara de escritorio Daewoo Pantalla Metal",
-        "precio": "$30.000", "vendido": false,
+        "precio": "$30.000", "vendido": true,
         }, {
         "desc": "Planta con maceta grande Montesquera oblicua",
         "precio": "$20.000", "vendido": false,
