--- a/todousado.html
+++ b/todousado.html
@@ -300,7 +300,7 @@
         "precio": "$20.000", "vendido": true,
         }, {
         "desc": "Cuadro enmarcado de El Señor de los Anillos",
-        "precio": "$14.000", "vendido": false,
+        "precio": "$14.000", "vendido": true,
         }, {
         "desc": "Campera para niño talle 8",
         "precio": "$7.000", "vendido": false,
@@ -916,6 +916,57 @@
         }, {
         "desc": "Mesa maciza ratona pinotea 88x150x44",
         "precio": "$250.000", "vendido": false,
+        }, {
+        "desc": "Bandeja de vidrio Pirex grande 34,5x23,5",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Estanteria de acero 160x75x35",
+        "precio": "$35.000", "vendido": false,
+        }, {
+        "desc": "Mochila niña",
+        "precio": "$80.000", "vendido": false,
+        }, {
+        "desc": "Mochila nueva 31cm x 25cm",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Mesa maciza ratona pinotea 88x150x44",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Patines profesionales Talle 34",
+        "precio": "$20.000", "vendido": false,
+        }, {
+        "desc": "Campera Wanama muy calentita talle 40",
+        "precio": "$40.000", "vendido": false,
+        }, {
+        "desc": "Zapatillas Vans talle 36",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Silla Tulip",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Casco Equitación Kylin 54",
+        "precio": "$25.000", "vendido": false,
+        }, {
+        "desc": "Fusta equitación impecable",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Polainas equitaciòn",
+        "precio": "$15.000", "vendido": false,
+        }, {
+        "desc": "Palo de Hockey Argentina niño 86cm",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Termo plastico",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Guarda tortas de plastico",
+        "precio": "$4.000", "vendido": false,
+        }, {
+        "desc": "Combo para hacer torta",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Dos Mancuernas ajustables 5kg + barrita",
+        "precio": "$50.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
@@ -983,7 +1034,7 @@
         Lista de productos usados - Pau y Dani
       </h1>
       <p style="font-size: 13px; margin-left: 20px;">
-        Actualizada Version 12 de Febrero 2024
+        Actualizada Version 13 de Febrero 2024
       </p>
       <p>Los productos se reservan solo con transferencia, sino se venden por orden de llegada retirando por el barrio San Andres.</p>
       <p>Revisar periodicamente la lista ya que se borra lo que se vende y se agregan items.</p>
