--- a/todousado.html
+++ b/todousado.html
@@ -303,10 +303,10 @@
         "precio": "$14.000", "vendido": true,
         }, {
         "desc": "Campera para niño talle 8",
-        "precio": "$7.000", "vendido": false,
+        "precio": "$7.000", "vendido": true,
         }, {
         "desc": "Campera para niño talle 10",
-        "precio": "$15.000", "vendido": false,
+        "precio": "$15.000", "vendido": true,
         }, {
         "desc": "Alfombra grande única hecha a mano",
         "precio": "$200.000", "vendido": true,
@@ -477,10 +477,10 @@
         "precio": "$8.000", "vendido": false,
         }, {
         "desc": "Juego de mesa Pit (original en ingles)",
-        "precio": "$21.000", "vendido": false,
+        "precio": "$21.000", "vendido": true,
         }, {
         "desc": "Juego de mesa Rack-O (original en ingles)",
-        "precio": "$22.000", "vendido": false,
+        "precio": "$22.000", "vendido": true,
         }, {
         "desc": "Juego de cartas Set (original en ingles)",
         "precio": "$18.000", "vendido": false,
@@ -804,7 +804,7 @@
         "precio": "$18.000", "vendido": false,
         }, {
         "desc": "Mochila termica importada marca Ozark Trails, excelente para llevar cervezas en caminata",
-        "precio": "$40.000", "vendido": false,
+        "precio": "$40.000", "vendido": true,
         }, {
         "desc": "Chevrolet Spin 7 Asientos Diesel 1.3 (se entrega despues de chapa y pintura de detalles) 189.000 km reales",
         "precio": "USD8.000", "vendido": false,
@@ -928,9 +928,6 @@
         }, {
         "desc": "Mochila nueva 31cm x 25cm",
         "precio": "$8.000", "vendido": false,
-        }, {
-        "desc": "Mesa maciza ratona pinotea 88x150x44",
-        "precio": "$25.000", "vendido": false,
         }, {
         "desc": "Patines profesionales Talle 34",
         "precio": "$20.000", "vendido": false,
