--- a/todousado.html
+++ b/todousado.html
@@ -777,7 +777,7 @@
         "precio": "$15.000", "vendido": false,
         }, {
         "desc": "Frazadas importadas con corderito (precio por cada uno)",
-        "precio": "$18.000", "vendido": false,
+        "precio": "$18.000", "vendido": true,
         }, {
         "desc": "Cama de 1 plaza",
         "precio": "$40.000", "vendido": false,
@@ -964,6 +964,42 @@
         }, {
         "desc": "Dos Mancuernas ajustables 5kg + barrita",
         "precio": "$50.000", "vendido": false,
+        }, {
+        "desc": "Picadora de ajo",
+        "precio": "$7.000", "vendido": false,
+        }, {
+        "desc": "Set utensillos torta",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "6 compoteras de plastico",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Pisa papa",
+        "precio": "$3.000", "vendido": false,
+        }, {
+        "desc": "Cuchara servidora de helado",
+        "precio": "$5.000", "vendido": false,
+        }, {
+        "desc": "Set de utensillos de cocina de madera",
+        "precio": "$12.000", "vendido": false,
+        }, {
+        "desc": "Frasco Largo de Vidrio para Spaghetti",
+        "precio": "$8.000", "vendido": false,
+        }, {
+        "desc": "Frasco de vidrio",
+        "precio": "$6.000", "vendido": false,
+        }, {
+        "desc": "Frasco de vidrio",
+        "precio": "$7.000", "vendido": false,
+        }, {
+        "desc": "Fuente de vidrio Pirex grande",
+        "precio": "$10.000", "vendido": false,
+        }, {
+        "desc": "Tupper redondo para pizza o tarta",
+        "precio": "$3.500", "vendido": false,
+        }, {
+        "desc": "Amplificador Guitarra Sunset nuevo con etiqueta",
+        "precio": "$90.000", "vendido": false,
         }];
       function show(num) {
         item = String(num).padStart(5, '0');
